<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/general_setting_notification_reminder_open_apps_key"
        android:summary="@string/general_setting_notification_reminder_open_apps_summary"
        android:title="@string/general_setting_notification_reminder_open_apps_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/general_setting_notification_reminder_release_today_key"
        android:summary="@string/general_setting_notification_reminder_release_today_summary"
        android:title="@string/general_setting_notification_reminder_release_today_title"
        android:theme="@style/SwitchTheme" />

</PreferenceScreen>