<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".ui.detailfilm.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:titleEnabled="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackdrop">

                <ProgressBar
                    android:id="@+id/progress_bar_img_backdrop"
                    android:layout_width="@dimen/progress_bar_width_normal"
                    android:layout_height="@dimen/progress_bar_height_normal"
                    android:progressBackgroundTint="@android:color/white"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_back_drop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_movie_image_backdrop_view_height"
                    android:contentDescription="@string/detail_image_backdrop_content_description"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_movie_image_backdrop_view_height"
                    android:background="@color/colorBackdrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_movie_image_backdrop_view_height"
                    android:background="@drawable/gradient_backdrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar_poster_img"
                android:layout_width="@dimen/progress_bar_width_normal"
                android:layout_height="@dimen/progress_bar_height_normal"
                android:progressBackgroundTint="@android:color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/img_poster"
                app:layout_constraintLeft_toLeftOf="@id/img_poster"
                app:layout_constraintRight_toRightOf="@id/img_poster"
                app:layout_constraintTop_toTopOf="@id/img_poster" />

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="@dimen/detail_movie_image_poster_view_width"
                android:layout_height="@dimen/detail_movie_image_poster_view_height"
                android:layout_marginStart="@dimen/general_space_big"
                android:layout_marginTop="@dimen/general_space_normal"
                android:contentDescription="@string/detail_image_poster_content_description"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/txt_label_overview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_title_movie"
                style="@style/LargeLabel.DetailMovie"
                android:layout_width="@dimen/general_zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_space_normal"
                android:text="@string/item_title_movie"
                app:layout_constraintLeft_toRightOf="@+id/img_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_container_description"
                android:layout_width="@dimen/general_zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_space_normal"
                android:layout_marginEnd="@dimen/general_space_normal"
                android:paddingBottom="@dimen/general_space_small"
                app:layout_constraintLeft_toRightOf="@+id/img_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_movie">

                <TextView
                    android:id="@+id/txt_rating"
                    style="@style/NormalLabel.DetailMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/general_space_small"
                    android:drawableStart="@drawable/ic_star_yellow_16dp"
                    android:text="@string/detail_image_rate_movie"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/divider_one"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider_one"
                    android:layout_width="@dimen/general_divider_width"
                    android:layout_height="@dimen/general_zero_dp"
                    android:layout_marginEnd="@dimen/general_space_small"
                    android:background="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/txt_rating"
                    app:layout_constraintRight_toLeftOf="@+id/txt_duration"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_duration"
                    style="@style/NormalLabel.DetailMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/general_space_small"
                    android:text="@string/detail_image_total_minutes_movie"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/divider_one"
                    app:layout_constraintRight_toLeftOf="@+id/divider_two"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider_two"
                    android:layout_width="@dimen/general_divider_width"
                    android:layout_height="@dimen/general_zero_dp"
                    android:layout_marginEnd="@dimen/general_space_small"
                    android:background="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/txt_duration"
                    app:layout_constraintRight_toLeftOf="@+id/txt_release_date"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_release_date"
                    style="@style/NormalLabel.DetailMovie"
                    android:layout_width="@dimen/general_zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/detail_image_release_date_movie"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/divider_two"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_genres"
                android:layout_width="@dimen/general_zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_space_normal"
                android:layout_marginEnd="@dimen/general_space_normal"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/general_space_small"
                app:layout_constraintLeft_toRightOf="@+id/img_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_container_description">

                <TextView
                    android:id="@+id/txt_label_genres"
                    style="@style/NormalLabel.DetailMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|top"
                    android:layout_marginEnd="@dimen/general_space_small"
                    android:lineSpacingMultiplier="@dimen/line_spacing_text"
                    android:text="@string/detail_txt_label_genres"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/txt_genres"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_genres"
                    style="@style/NormalLabel.DetailMovie.WhiteOpacity"
                    android:layout_width="@dimen/general_zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/detail_txt_value_genres"
                    app:layout_constraintLeft_toRightOf="@+id/txt_label_genres"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_language"
                android:layout_width="@dimen/general_zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_space_normal"
                android:layout_marginEnd="@dimen/general_space_normal"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/general_space_small"
                app:layout_constraintLeft_toRightOf="@+id/img_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_genres">

                <TextView
                    android:id="@+id/txt_label_language"
                    style="@style/NormalLabel.DetailMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/general_space_small"
                    android:text="@string/detail_txt_label_language"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/txt_language"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_language"
                    style="@style/NormalLabel.DetailMovie.WhiteOpacity"
                    android:layout_width="@dimen/general_zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/detail_txt_value_language"
                    app:layout_constraintLeft_toRightOf="@+id/txt_label_language"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/general_zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_space_normal"
                android:layout_marginEnd="@dimen/general_space_normal"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/general_space_small"
                app:layout_constraintLeft_toRightOf="@+id/img_poster"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_language">

                <TextView
                    android:id="@+id/txt_label_status"
                    style="@style/NormalLabel.DetailMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|top"
                    android:layout_marginEnd="@dimen/general_space_small"
                    android:text="@string/detail_txt_label_status"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/txt_status"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_status"
                    style="@style/NormalLabel.DetailMovie.WhiteOpacity"
                    android:layout_width="@dimen/general_zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/detail_txt_value_status"
                    app:layout_constraintLeft_toRightOf="@+id/txt_label_status"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txt_label_overview"
                style="@style/NormalLabel.DetailMovie.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/general_space_big"
                android:layout_marginTop="@dimen/general_space_normal"
                android:text="@string/detail_txt_label_overview"
                app:layout_constraintBottom_toTopOf="@+id/txt_overview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_poster" />

            <TextView
                android:id="@+id/txt_overview"
                style="@style/NormalLabel.DetailMovie"
                android:layout_width="@dimen/general_zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/general_space_big"
                android:layout_marginTop="@dimen/general_space_small"
                android:layout_marginEnd="@dimen/general_space_normal"
                android:lineSpacingMultiplier="@dimen/line_spacing_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_label_overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/general_space_normal"
        android:layout_marginBottom="@dimen/general_space_normal"
        android:backgroundTint="@color/colorFavorite"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:borderWidth="@dimen/item_movie_card_fab_border_width" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_width_normal"
        android:layout_height="@dimen/progress_bar_height_normal"
        android:layout_gravity="center"
        android:progressBackgroundTint="@android:color/white"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>