<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_movie_card_view_height"
    android:layout_marginLeft="@dimen/general_space_big"
    android:layout_marginTop="@dimen/general_space_big"
    android:layout_marginRight="@dimen/general_space_big">

    <androidx.cardview.widget.CardView
        android:id="@+id/container_card_view"
        android:layout_width="@dimen/general_zero_dp"
        android:layout_height="@dimen/item_movie_card_view_container_height"
        android:background="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="@dimen/item_movie_card_view_radius"
        card_view:cardElevation="@dimen/general_zero_dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_item_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="@dimen/item_movie_image_width"
                android:layout_height="match_parent"
                android:contentDescription="@string/item_image_content_description"
                android:scaleType="fitXY"
                android:src="@drawable/no_image_available"
                app:cornerRadius="@dimen/item_movie_card_view_radius"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_rating"
                style="@style/NormalLabel.DetailMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/colorRating"
                android:drawableStart="@drawable/ic_star_yellow_16dp"
                android:padding="@dimen/general_space_rating"
                android:text="@string/detail_image_rate_movie"
                app:layout_constraintRight_toRightOf="@+id/img_movie"
                app:layout_constraintTop_toTopOf="@+id/img_movie" />

            <ProgressBar
                android:id="@+id/progress_bar_img"
                android:layout_width="@dimen/progress_bar_width_normal"
                android:layout_height="@dimen/progress_bar_height_normal"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:progressBackgroundTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/img_movie"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/img_movie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_title_movie"
                style="@style/LargeLabel.ItemMovie"
                android:paddingTop="@dimen/general_space_small"
                android:text="@string/item_title_movie"
                app:layout_constraintLeft_toRightOf="@+id/img_movie"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_release_date"
                style="@style/NormalLabel.ItemMovie"
                android:text="@string/item_title_movie"
                app:layout_constraintLeft_toRightOf="@+id/img_movie"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_movie" />

            <TextView
                android:id="@+id/txt_content"
                style="@style/NormalLabel.ItemMovie"
                android:lineSpacingMultiplier="@dimen/line_spacing_text"
                app:layout_constraintLeft_toRightOf="@+id/img_movie"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_release_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/general_space_normal"
        android:backgroundTint="@color/colorFavorite"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:borderWidth="@dimen/item_movie_card_fab_border_width"
        app:layout_constraintBottom_toBottomOf="@+id/container_card_view"
        app:layout_constraintRight_toRightOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/container_card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>